# docs/swagger.json
@@ -122,8 +122,14 @@
                     }
                 ],
                 "responses": {
-                    "200": {
+                    "204": {
                         "description": "Task deleted successfully",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request",
                         "schema": {
                             "type": "string"
                         }
